--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="Angular_Xrm_ts_xml" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Templates\Angular.Xrm.ts.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="AxiosTemplate" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Templates\AxiosTemplate.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="github_help_url" xml:space="preserve">
     <value>https://github.com/jamesnovak/CrmSvcUtilTS/wiki</value>
     <comment>Github Help URL</comment>
